--- a/Magic_Food/package.json
+++ b/Magic_Food/package.json
@@ -2,17 +2,17 @@
   "name": "magic_food",
   "version": "1.0.0",
   "description": "Food Ordering App",
-  
   "scripts": {
-    "start":"parcel index.html & parcel watch ./src/index.html",
-    "build":"parcel build index.html",
+    "start": "parcel index.html & parcel watch ./src/index.html",
+    "build": "parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Irshad Ali",
   "license": "ISC",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "parcel": "^2.12.0",
